--- a/VR demonstrator for first responders/Packages/manifest.json
+++ b/VR demonstrator for first responders/Packages/manifest.json
@@ -11,6 +11,8 @@
     "com.unity.timeline": "1.4.8",
     "com.unity.ugui": "1.0.0",
     "com.unity.xr.interaction.toolkit": "1.0.0-pre.8",
+    "com.unity.xr.management": "4.2.0",
+    "com.unity.xr.windowsmr": "4.5.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
